--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <nav>
-      <a href="">Home</a>
-      <a href="">About Me</a>
+      <a href="index.html">Home</a>
+      <a href="about.html">About Me</a>
     </nav>
   
     
