Added pages and info

--- a/about.html
+++ b/about.html
@@ -2,11 +2,6 @@
 <html>
 
 <head>
-  <!-- Navigation Bar -->
-  <nav>
-    <a href="put the name of the main file here.html">Home</a>
-      <a href="about.html">About Me</a>
-  </nav>
   
   <style>
     body {
@@ -29,16 +24,24 @@
 
 <body>
 
-
+  <!-- Navigation Bar -->
+  <nav>
+    <a href="put the name of the main file here.html">Home</a>
+      <a href="about.html">About Me</a>
+    <a href="contact.html">Contact Information</a>
+    <a href="family.html">Family</a>
+  
+    
+  </nav>
 
   <div class="box">
     <h1>About Me</h1>
     <p>
-     I'm in 7th grade, RISE Academy
-    </p>
-    <p>
-      
-    </p>
+      <li>
+  <ul> I'm in 7th grade, RISE Academy</ul>
+<li><ul>My birthday is November 10th</ul>
+        <li><ul>I am 13 years old</ul>
+      </li>    </p>
   </div>
 
 </body>
