--- a/family.html
+++ b/family.html
@@ -26,7 +26,7 @@
 
   <!-- Navigation Bar -->
   <nav>
-    <a href="put the name of the main file here.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="about.html">About Me</a>
     <a href="contact.html">Contact Information</a>
     <a href="family.html">Family</a>
