--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
       margin: 10px;
     }
   </style>
-  
+
   <title>About Me - Zoya</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -26,7 +26,7 @@
 
   <!-- Navigation Bar -->
   <nav>
-    <a href="put the name of the main file here.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="about.html">About Me</a>
     <a href="contact.html">Contact Information</a>
     <a href="family.html">Family</a>
@@ -36,11 +36,11 @@
   <div class="box">
     <h1>Contact Information</h1>
     <p>
-      
-      <h3>
-        <li>
-          <ul>
-            My email: zj_0849@student.riseacademy.education
-            </ul>
-          </li>
-      </h3>
+
+    <h3>
+      <li>
+        <ul>
+          My email: zj_0849@student.riseacademy.education
+        </ul>
+      </li>
+    </h3>
