--- a/about.html
+++ b/about.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
+<<!DOCTYPE html>
 <html>
 
 <head>
-  
+
   <style>
     body {
       font-family:
@@ -26,24 +27,6 @@
 
   <!-- Navigation Bar -->
   <nav>
-    <a href="put the name of the main file here.html">Home</a>
-      <a href="about.html">About Me</a>
+    <a href="index.html">Home</a>
+    <a href="about.html">About Me</a>
     <a href="contact.html">Contact Information</a>
-    <a href="family.html">Family</a>
-  
-    
-  </nav>
-
-  <div class="box">
-    <h1>About Me</h1>
-    <p>
-      <li>
-  <ul> I'm in 7th grade, RISE Academy</ul>
-<li><ul>My birthday is November 10th</ul>
-        <li><ul>I am 13 years old</ul>
-      </li>    </p>
-  </div>
-
-</body>
-
-</html>
