fixed the entire page

--- a/about.html
+++ b/about.html
@@ -29,3 +29,23 @@
     <a href="index.html">Home</a>
     <a href="about.html">About Me</a>
     <a href="contact.html">Contact Information</a>
+    <a href="family.html">Family</a>
+
+  </nav>
+
+  <div class="box">
+    <h1>About Me</h1>
+    <p>
+      <li>
+        <ul> I'm in 7th grade, RISE Academy</ul>
+      <li>
+        <ul>My birthday is November 10th</ul>
+      <li>
+        <ul>I am 13 years old</ul>
+      </li>
+    </p>
+  </div>
+
+</body>
+
+</html>
