--- a/index.html
+++ b/index.html
@@ -62,3 +62,13 @@
   
       </head>
     </html>
+
+      body { background-color: #5fc9de; font-family: 'Roboto', sans-serif; }
+
+h1 { Color: White; font-family: 'Pacifico'; text-align: center;
+  border: 1px solid black; }
+
+.container { display: inline-block; font-family: Arial; width: px;
+  height: 300px; background-color: white; color: #5fc9de }
+
+img { text-align: center; }
